<resources>
    <string name="app_name">AgroSmart</string>
    <string name="title_activity_login">Entrar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">El email es invalido</string>
    <string name="error_invalid_password">Esta contraseña es muy pequeña</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="permission_rationale">"Permisos a los conactos es requerido."</string>
    <string name="error_network">Conexion de red no disponible</string>
    <string name="inicio">Desde: </string>
    <string name="fin">Hasta: </string>
    <string name="cancelar">Cancelar</string>
    <string name="add_date">Agregar Fecha</string>
    <string name="add_time">Agregar Hora</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_admin">Fragment Administrador</string>
    <string name="fragment_agrono">Fragment Agronomo</string>
    <string name="fragment_ciente">Fragment Cliente</string>

    <string name="logout">Salir</string>
    <string name="search">Buscar</string>
    <string name="Equipos">Equipos</string>
    <string name="Usuarios">Usuarios</string>

    <string name="comentarios">Comentarios</string>
    <string name="tareas">Tareas</string>
    <string name="datos">Datos</string>
    <string name="vincular">Vincular</string>
    <string name="fincas">Fincas</string>
    <string name="parcela">Parcelas</string>
    <string name="equipo">Equipos</string>
    <string name="usuario">Usuarios</string>
    <string name="dashboard">Dashboard</string>
    <string name="configurar_equipo">Configurar Equipo</string>
    <string name="nueva_seleccion_finca">Seleccionar una nueva finca</string>
    <string name="perfil">Perfil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="administrador">Administrador</string>
    <string name="agronomo">Agronomo</string>
    <string name="cliente">Cliente</string>

    <string name="nombre">Nombre</string>
    <string name="tarea">Tarea</string>
    <string name="apellido">Apellido</string>
    <string name="Email">Email</string>
    <string name="password">Contraseña</string>
    <string name="tipo">Tipo</string>
    <string name="telefono">Telefono</string>
    <string name="Direccion">Dirección</string>
    <string name="tipo_de_dispositivo">Tipo de Dispositivo</string>
    <string name="descripcion">Descripcion</string>
    <string name="nueva_pass">Ingrese la nueva Contraseña</string>
    <string name="repita_nueva_pass">Repita la nueva Contraseña</string>

    <string name="guardar">Guardar</string>

    <string name="titulo_add_user">Agregue un Nuevo Usuario</string>
    <string name="titulo_add_parcela">Agregue una Nueva Parcela</string>
    <string name="titulo_add_finca">Agregue una Nueva Finca</string>
    <string name="titulo_add_equipo">Agregue un Nuevo Equipo</string>
    <string name="titulo_update_usuario">Actualice el usuario</string>
    <string name="titulo_update_usuariopass">Actualice la contraseña</string>
    <string name="titulo_update_equipo">Actualice el equipo</string>
    <string name="titulo_update_parcela">Actualice la parcela</string>
    <string name="titulo_update_finca">Actualice la finca</string>
    <string name="cambiar_pass">¿Quieres cambiar la contraseña?</string>
    <string name="titulo_index">Elija la Finca a vincular</string>
    <string name="titulo_asociar_equipos">Administre los Equipos de la Parcela</string>
    <string name="titulo_asociar_parcelas">Administre las Parcelas de la Finca</string>
    <string name="titulo_asociar_usuarios">Administre los Usuarios de la parcela</string>
    <string name="titulo_equipo">Administre los Equipos</string>
    <string name="titulo_finca">Administre las Fincas</string>
    <string name="titulo_usuario">Administre los Usuarios</string>
    <string name="titulo_parcela">Administre las Parcelas</string>
    <string name="titulo_vincular">Vincule los elemetos de una finca</string>
    <string name="titulo_comentario">Leer y escribir comentarios a la parcela</string>
    <string name="titulo_tarea">Leer las Tareas recomendadas a la parcela</string>
    <string name="titulo_datos">Ver datos de los Equipos</string>
    <string name="chose_finca">Elija la finca a Visualizar</string>
    <string name="titulo_tarea_add">Agregar una Nueva Tarea</string>

    <string name="nombre_no_valido">Nombre no valido</string>

    <string name="activo">Activo</string>
    <string name="bloqueado">Bloqueado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
