<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.add.addUsuarios">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_tarea_add"
                android:textSize="@dimen/titulo_size"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tarea"
                    android:layout_width="300dp"
                    android:layout_height="140dp"
                    android:background="@drawable/capsule_blanco"
                    android:hint="@string/tarea"
                    android:inputType="text|textMultiLine"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inicio"
                    android:textColor="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:padding="20dp"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/fecha_inicio"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/fecha"
                        android:background="@drawable/capsule_blanco"/>

                    <TextView
                        android:id="@+id/hora_inicio"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hora"
                        android:background="@drawable/capsule_blanco"/>
                </LinearLayout>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/fin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fin"
                    android:textColor="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:padding="20dp"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/fecha_fin"
                        android:layout_width="150dp"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_height="wrap_content"
                        android:hint="@string/fecha"
                        android:background="@drawable/capsule_blanco"/>

                    <TextView
                        android:id="@+id/hora_fin"
                        android:layout_width="100dp"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_height="wrap_content"
                        android:hint="@string/hora"
                        android:background="@drawable/capsule_blanco"/>
                </LinearLayout>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:id="@+id/guardar"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="40dp"
                    style="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="16dp"
                    android:text="@string/guardar"
                    android:background="@drawable/capsule_blanco"
                    android:textStyle="bold"/>


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>