<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/email"
                    android:background="@drawable/capsule_blanco"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingEnd="20dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:background="@drawable/capsule_blanco"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:paddingRight="20dp"
                    android:paddingEnd="20dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="end">
                <Button
                    android:id="@+id/button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:background="@drawable/capsule_blanco"
                    android:textStyle="bold" />
            </android.support.v7.widget.LinearLayoutCompat>

        </LinearLayout>
</LinearLayout>