<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.update.UpdateUsuario">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_update_usuariopass"
                android:textSize="@dimen/titulo_size"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newpass"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/capsule_blanco"
                    android:hint="@string/nueva_pass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/repetirnewpass"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/capsule_blanco"
                    android:hint="@string/repita_nueva_pass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:id="@+id/guardar"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    style="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="16dp"
                    android:text="@string/guardar"
                    android:background="@drawable/capsule_blanco"
                    android:textStyle="bold"/>


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>